feat: support attribute resolution per tenants