@@ -12,6 +12,7 @@ import org.apereo.cas.authentication.principal.resolvers.ChainingPrincipalResolv
 import org.apereo.cas.authentication.principal.resolvers.EchoingPrincipalResolver;
 import org.apereo.cas.authentication.principal.resolvers.PersonDirectoryPrincipalResolver;
 import org.apereo.cas.configuration.CasConfigurationProperties;
+import org.apereo.cas.multitenancy.TenantExtractor;
 import org.apereo.cas.services.ServicesManager;
 import org.apereo.cas.test.CasTestExtension;
 import org.apereo.cas.util.junit.EnabledIfListeningOnPort;
@@ -23,7 +24,6 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.context.ConfigurableApplicationContext;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Optional;
@@ -37,26 +37,26 @@ import static org.junit.jupiter.api.Assertions.*;
  */
 @SpringBootTest(classes = BaseLdapAuthenticationHandlerTests.SharedTestConfiguration.class,
     properties = {
-    "cas.authn.attribute-repository.ldap[0].base-dn=dc=example,dc=org",
-    "cas.authn.attribute-repository.ldap[0].ldap-url=ldap://localhost:10389",
-    "cas.authn.attribute-repository.ldap[0].search-filter=cn={cnuser}",
-    "cas.authn.attribute-repository.ldap[0].attributes.cn=cn",
-    "cas.authn.attribute-repository.ldap[0].attributes.description=description",
-    "cas.authn.attribute-repository.ldap[0].attributes.entryDN=entryDN",
-    "cas.authn.attribute-repository.ldap[0].bind-dn=cn=Directory Manager",
-    "cas.authn.attribute-repository.ldap[0].bind-credential=password",
-    "cas.authn.attribute-repository.ldap[0].use-all-query-attributes=false",
-    "cas.authn.attribute-repository.ldap[0].query-attributes.principal=cnuser",
-    "cas.authn.attribute-repository.ldap[0].search-entry-handlers[0].type=DN_ATTRIBUTE_ENTRY",
-    "cas.authn.attribute-repository.ldap[0].search-entry-handlers[1].type=MERGE_ENTRIES",
-    "cas.authn.attribute-repository.ldap[0].search-entry-handlers[2].type=FOLLOW_SEARCH_REFERRAL",
-    "cas.authn.attribute-repository.ldap[0].search-entry-handlers[3].type=FOLLOW_SEARCH_RESULT_REFERENCE",
-    "cas.authn.attribute-repository.ldap[0].search-entry-handlers[4].type=ACTIVE_DIRECTORY",
-    "cas.authn.attribute-repository.ldap[0].search-entry-handlers[5].type=MERGE_ENTRIES",
-    "cas.authn.attribute-repository.ldap[0].search-entry-handlers[6].type=RECURSIVE_ENTRY",
-    "cas.authn.attribute-repository.ldap[0].search-entry-handlers[7].type=RANGE_ENTRY",
-    "cas.authn.attribute-repository.ldap[0].search-entry-handlers[8].type=PRIMARY_GROUP"
-})
+        "cas.authn.attribute-repository.ldap[0].base-dn=dc=example,dc=org",
+        "cas.authn.attribute-repository.ldap[0].ldap-url=ldap://localhost:10389",
+        "cas.authn.attribute-repository.ldap[0].search-filter=cn={cnuser}",
+        "cas.authn.attribute-repository.ldap[0].attributes.cn=cn",
+        "cas.authn.attribute-repository.ldap[0].attributes.description=description",
+        "cas.authn.attribute-repository.ldap[0].attributes.entryDN=entryDN",
+        "cas.authn.attribute-repository.ldap[0].bind-dn=cn=Directory Manager",
+        "cas.authn.attribute-repository.ldap[0].bind-credential=password",
+        "cas.authn.attribute-repository.ldap[0].use-all-query-attributes=false",
+        "cas.authn.attribute-repository.ldap[0].query-attributes.principal=cnuser",
+        "cas.authn.attribute-repository.ldap[0].search-entry-handlers[0].type=DN_ATTRIBUTE_ENTRY",
+        "cas.authn.attribute-repository.ldap[0].search-entry-handlers[1].type=MERGE_ENTRIES",
+        "cas.authn.attribute-repository.ldap[0].search-entry-handlers[2].type=FOLLOW_SEARCH_REFERRAL",
+        "cas.authn.attribute-repository.ldap[0].search-entry-handlers[3].type=FOLLOW_SEARCH_RESULT_REFERENCE",
+        "cas.authn.attribute-repository.ldap[0].search-entry-handlers[4].type=ACTIVE_DIRECTORY",
+        "cas.authn.attribute-repository.ldap[0].search-entry-handlers[5].type=MERGE_ENTRIES",
+        "cas.authn.attribute-repository.ldap[0].search-entry-handlers[6].type=RECURSIVE_ENTRY",
+        "cas.authn.attribute-repository.ldap[0].search-entry-handlers[7].type=RANGE_ENTRY",
+        "cas.authn.attribute-repository.ldap[0].search-entry-handlers[8].type=PRIMARY_GROUP"
+    })
 @Tag("LdapAttributes")
 @ExtendWith(CasTestExtension.class)
 @EnabledIfListeningOnPort(port = 10389)
@@ -83,6 +83,10 @@ class PersonDirectoryPrincipalResolverLdapTests {
     @Qualifier(AttributeRepositoryResolver.BEAN_NAME)
     private AttributeRepositoryResolver attributeRepositoryResolver;
 
+    @Autowired
+    @Qualifier(TenantExtractor.BEAN_NAME)
+    private TenantExtractor tenantExtractor;
+
     @Test
     void verifyResolver() throws Throwable {
         val attributeMerger = CoreAuthenticationUtils.getAttributeMerger(casProperties.getAuthn().getAttributeRepository().getCore().getMerger());
@@ -103,12 +107,12 @@ class PersonDirectoryPrincipalResolverLdapTests {
     void verifyChainedResolver() throws Throwable {
         val resolver = PersonDirectoryPrincipalResolver.newPersonDirectoryPrincipalResolver(
             applicationContext, PrincipalFactoryUtils.newPrincipalFactory(),
-            this.attributeRepository,
+            attributeRepository,
             CoreAuthenticationUtils.getAttributeMerger(casProperties.getAuthn().getAttributeRepository().getCore().getMerger()),
             servicesManager, attributeDefinitionStore,
             attributeRepositoryResolver, casProperties.getPersonDirectory());
-        val chain = new ChainingPrincipalResolver(new DefaultPrincipalElectionStrategy(), casProperties);
-        chain.setChain(Arrays.asList(new EchoingPrincipalResolver(), resolver));
+        val chain = new ChainingPrincipalResolver(new DefaultPrincipalElectionStrategy(), tenantExtractor,
+            List.of(new EchoingPrincipalResolver(), resolver), casProperties);
         val attributes = new HashMap<String, List<Object>>(2);
         attributes.put("a1", List.of("v1"));
         attributes.put("a2", List.of("v2"));
